js/js.translator/testData/incremental/invalidationWithPL/removeClassUsedFromConsumer/main/test.0.kt
import sample.Foo

fun test(): Int {
    return try {
        Foo().value()
    } catch (e: Error) {
        1
    }
}
